--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "header": {
-    "title": "Bizfly Cloud Cost Calculator"
+    "title": "Bizfly Cloud Cost Calculator",
+    "ai_estimate_button": "AI Estimate Generator"
   },
   "services": {
     "select_service": "Select a Service to Estimate",
@@ -18,7 +19,8 @@
     "WanIp": "WAN IP",
     "Snapshot": "Snapshot",
     "BackupSchedule": "Backup Schedule",
-    "CustomImage": "Custom Image"
+    "CustomImage": "Custom Image",
+    "AI": "AI Generated"
   },
   "summary": {
     "title": "Cost Estimate",
@@ -45,6 +47,22 @@
     "per_month": "/month",
     "per_hours": "for {hours} hours",
     "quantity": "Quantity"
+  },
+  "ai_estimate": {
+    "title": "AI Estimate Generator",
+    "description": "Generate a cost estimate by uploading an image (like an invoice or architecture diagram) or describing your infrastructure needs in the text box below.",
+    "tab_upload": "Upload Image",
+    "tab_text": "Enter Text",
+    "upload_label": "Click to upload or drag and drop",
+    "upload_supported": "PNG, JPG, GIF up to 10MB",
+    "text_label": "Describe your requirements",
+    "text_placeholder": "e.g., 'I need two premium cloud servers with 4vCPU, 8GB RAM, and 100GB SSD each. Also, add a managed database with 2vCPU and 4GB RAM.'",
+    "generate_button": "Generate Estimate",
+    "generating_message": "Analyzing your request with AI...",
+    "error_title": "An error occurred",
+    "results_title": "Generated Estimate",
+    "add_to_main_estimate": "Add Items to Main Estimate",
+    "no_results": "The AI could not identify any services from your request. Please try again with more details."
   },
   "cloud_server": {
     "title": "Cloud Server Calculator",
