feat(kafka): Introduce predefined packages for simpler configuration
Refactors the Kafka calculator to use predefined CPU/RAM packages instead of manual input. This simplifies the user experience by offering fixed configurations.

Updates i18n files to include new package-related strings and modifies the Kafka pricing JSON to define these packages.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -156,6 +156,8 @@
     "cpu_cores": "CPU Cores",
     "ram_gb": "RAM (GB)",
     "disk_gb": "Disk Size (GB)",
+    "package": "Package",
+    "package_option": "{cpu} vCPU / {ram} GB RAM - {price} VNĐ/month",
     "include_wan": "Include WAN IP (+{price} VNĐ)",
     "desc": "Tier: {tier}, {cpu} vCPU, {ram} GB RAM, {disk} GB Disk",
     "desc_wan": "Tier: {tier}, {cpu} vCPU, {ram} GB RAM, {disk} GB Disk + WAN IP"
