refactor: Remove AI service from cost calculator
The AI service option has been removed from the cost calculator feature. This change involves updating type definitions, service icon mappings, and localization files to reflect the removal.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -19,8 +19,7 @@
     "WanIp": "WAN IP",
     "Snapshot": "Snapshot",
     "BackupSchedule": "Backup Schedule",
-    "CustomImage": "Custom Image",
-    "AI": "AI Generated"
+    "CustomImage": "Custom Image"
   },
   "summary": {
     "title": "Cost Estimate",
