feat: Add VPN and WAF calculators
This commit introduces new calculators for VPN Site-to-Site and Cloud WAF services. It includes:
- Updates to the `types.ts` file to include `Vpn` and `WAF` as new `ServiceId`s.
- Integration of the new calculator components (`VpnCalculator`, `WafCalculator`) into `App.tsx`.
- Localization updates for English and Vietnamese (`en.json`, `vi.json`) to support the new services with appropriate translations for titles, descriptions, and input fields.
- Addition of `vpn` and `waf` to the list of pricing files loaded in `PricingContext.tsx`.
- Introduction of new pricing data files (`pricing/vpn.json`) for the VPN calculator.
- Implementation of the `VpnCalculator.tsx` component to handle user selections for VPN bandwidth packages and additional data transfer, and to add the estimate to the cart.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -19,7 +19,9 @@
     "Snapshot": "Snapshot",
     "BackupSchedule": "Backup Schedule",
     "CustomImage": "Custom Image",
-    "CDN": "CDN"
+    "CDN": "CDN",
+    "Vpn": "VPN Site-to-Site",
+    "WAF": "Cloud WAF"
   },
   "summary": {
     "title": "Cost Estimate",
@@ -188,6 +190,22 @@
     "price_tier_info": "Your current price tier: {price} VND/GB",
     "min_usage_note": "Note: Minimum usage is 200 GB/month (100,000 VND/month).",
     "desc": "Datatransfer Volume: {transfer} GB/month"
+  },
+  "vpn": {
+    "title": "VPN Site-to-Site Calculator",
+    "description": "Choose a subscription package based on bandwidth and add any extra data transfer.",
+    "package": "Bandwidth Package",
+    "package_option": "{name} - {price} VNĐ/month",
+    "data_transfer": "Additional Data Transfer (GB)",
+    "desc": "Package: {package}",
+    "desc_transfer": "Package: {package}, Additional Transfer: {transfer} GB"
+  },
+  "waf": {
+    "title": "Cloud WAF Calculator",
+    "description": "Estimate costs for the Bizfly Cloud Web Application Firewall (WAF) service, based on subscription, requests, and data transfer.",
+    "requests_per_month": "Requests per month (in millions)",
+    "data_transfer": "Outbound Data Transfer (GB/month)",
+    "desc": "Subscription for 1 website/app, with {requests}M requests and {transfer} GB outbound transfer."
   },
   "wan_ip": {
     "title": "WAN IP Calculator",
