feat(cloud-server): Add support for external data disks
This commit introduces the functionality to configure and add external data disks to the Cloud Server calculator. This enhances the cost estimation by allowing users to account for additional storage beyond the root disk.

The UI and i18n translations have been updated to include options for specifying quantity, disk type, and size for these external disks. The description strings have also been modified to reflect the inclusion of external disks in the server configuration summary.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -53,21 +53,24 @@
   },
   "cloud_server": {
     "title": "Cloud Server Calculator",
-    "description": "Configure your virtual server specifications. Choose between high-performance AMD Gen 4 or versatile Intel Gen 2 chips.",
+    "description": "Configure your virtual server specifications. Choose between high-performance AMD Gen 4 or versatile Intel Gen 2 chips, and attach external storage as needed.",
     "chip_model": "Chip Model",
     "billing_method": "Billing Method",
     "subscription": "Subscription",
     "on_demand": "On-Demand",
     "hours": "Number of Hours",
     "tier": "Tier",
-    "vcpu_cores": "vCPU Cores",
-    "ram_gb": "RAM (GB)",
     "vcpu": "vCPU",
     "ram": "RAM",
-    "disk_type": "Disk Type",
-    "disk_size": "Disk Size (GB)",
-    "desc": "Chip: {chip}, Tier: {tier}, Billing: {billing}, {cpu} vCPU, {ram} GB RAM, {diskSize} GB {diskType} Disk",
-    "desc_hours": "Chip: {chip}, Tier: {tier}, Billing: {billing} ({hours} hours), {cpu} vCPU, {ram} GB RAM, {diskSize} GB {diskType} Disk"
+    "disk_type": "Root Disk Type",
+    "disk_size": "Root Disk Size (GB)",
+    "base_config": "Base Server Configuration",
+    "external_disks_title": "External Data Disks",
+    "add_disk": "Add External Disk",
+    "remove_disk": "Remove Disk",
+    "disk_quantity": "Quantity",
+    "desc": "Chip: {chip}, Tier: {tier}, Billing: {billing}, {cpu} vCPU, {ram} GB RAM, {diskSize} GB {diskType} Root Disk {externalDisks}",
+    "desc_hours": "Chip: {chip}, Tier: {tier}, Billing: {billing} ({hours} hours), {cpu} vCPU, {ram} GB RAM, {diskSize} GB {diskType} Root Disk {externalDisks}"
   },
   "cloud_vps": {
     "title": "Cloud VPS Calculator",
