--- a/i18n/vi.json
+++ b/i18n/vi.json
@@ -53,21 +53,24 @@
   },
   "cloud_server": {
     "title": "Công cụ tính Cloud Server",
-    "description": "Cấu hình thông số máy chủ ảo của bạn. Lựa chọn giữa chip AMD Gen 4 hiệu năng cao hoặc Intel Gen 2 đa dụng.",
+    "description": "Cấu hình thông số máy chủ ảo của bạn. Lựa chọn giữa chip AMD Gen 4 hiệu năng cao hoặc Intel Gen 2 đa dụng, và đính kèm ổ đĩa ngoài nếu cần.",
     "chip_model": "Loại Chip",
     "billing_method": "Phương thức thanh toán",
     "subscription": "Theo tháng",
     "on_demand": "Theo giờ",
     "hours": "Số giờ",
     "tier": "Loại",
-    "vcpu_cores": "Số lõi vCPU",
-    "ram_gb": "RAM (GB)",
     "vcpu": "vCPU",
     "ram": "RAM",
-    "disk_type": "Loại ổ đĩa",
-    "disk_size": "Dung lượng ổ đĩa (GB)",
-    "desc": "Chip: {chip}, Loại: {tier}, Thanh toán: {billing}, {cpu} vCPU, {ram} GB RAM, {diskSize} GB ổ {diskType}",
-    "desc_hours": "Chip: {chip}, Loại: {tier}, Thanh toán: {billing} ({hours} giờ), {cpu} vCPU, {ram} GB RAM, {diskSize} GB ổ {diskType}"
+    "disk_type": "Loại ổ đĩa gốc",
+    "disk_size": "Dung lượng ổ đĩa gốc (GB)",
+    "base_config": "Cấu hình máy chủ cơ bản",
+    "external_disks_title": "Ổ đĩa dữ liệu ngoài",
+    "add_disk": "Thêm ổ đĩa ngoài",
+    "remove_disk": "Xóa ổ đĩa",
+    "disk_quantity": "Số lượng",
+    "desc": "Chip: {chip}, Loại: {tier}, Thanh toán: {billing}, {cpu} vCPU, {ram} GB RAM, {diskSize} GB ổ {diskType} gốc {externalDisks}",
+    "desc_hours": "Chip: {chip}, Loại: {tier}, Thanh toán: {billing} ({hours} giờ), {cpu} vCPU, {ram} GB RAM, {diskSize} GB ổ {diskType} gốc {externalDisks}"
   },
   "cloud_vps": {
     "title": "Công cụ tính Cloud VPS",
