feat(snapshot): Improve snapshot calculation and UI
Refactors the snapshot calculator to use a tiered pricing model based on underlying block storage. Updates the UI and translations to reflect the new calculation method, which is now based on a percentage of block storage subscription costs.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -242,9 +242,11 @@
   },
   "snapshot": {
     "title": "Snapshot Calculator",
-    "description": "Estimate the monthly cost for storing server volume snapshots based on their total size.",
-    "size": "Total Snapshot Size (GB)",
-    "desc": "Volume Snapshot Storage: {size} GB"
+    "description": "Estimate the monthly cost for snapshots, calculated as 20% of the corresponding Block Storage subscription price.",
+    "tier": "Tier",
+    "volume_type": "Volume Type",
+    "volume_size": "Volume Size (GB)",
+    "desc": "Snapshot for {size} GB {type} Volume ({tier} Tier)"
   },
   "backup_schedule": {
     "title": "Backup Schedule Calculator",
